# find-gh-repo

./: README.md  pyproject.toml  results.json  search_from_markdown.py  search_request.md
src/github_repo_search/: __init__.py  cli.py
tests/: test_cli.py
