[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-mcp-repo-search"
version = "0.1.0"
description = "Mini project for searching GitHub repositories with a GitHub MCP server"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
